Fix contract paragraph spacing

--- a/TESS/Content/ContractPdf.css
+++ b/TESS/Content/ContractPdf.css
@@ -15,7 +15,7 @@
   color: black;
 }
 .crm-pdf p {
-  margin: 0;
+  margin: 0 0 10px 0;
 }
 .crm-pdf .h4,
 .crm-pdf .h5,
